change black color

--- a/hr_app/hr_search/templates/employees.html
+++ b/hr_app/hr_search/templates/employees.html
@@ -246,7 +246,7 @@
         if (name === 'Active') {
             return '#4CAF50'; // Light green
         } else if (name === 'Not started') {
-            return '#8A2BE2'; // Darker purple
+            return '#CCCCCC'; // Darker purple
         } else if (name === 'Terminated') {
             return '#FF6347'; // Light coral
         } else {
