--- a/hr_app/hr_search/templates/employees.html
+++ b/hr_app/hr_search/templates/employees.html
@@ -244,11 +244,11 @@
     function getColorForName(name) {
         // Define colors based on name values
         if (name === 'Active') {
-            return '#4CAF50'; // Light green
+            return '#4CAF50'; 
         } else if (name === 'Not started') {
-            return '#8A2BE2'; // Darker purple
+            return '#8A2BE2'; 
         } else if (name === 'Terminated') {
-            return '#FF6347'; // Light coral
+            return '#FF6347';  
         } else {
             return 'black';
         }
